# inter_ex_arbitrage

./: .gitignore  README.md  config.yaml  main.py  pyproject.toml
.taskmaster/docs/: prd.txt
src/arbitrage_bot/: bot.py  cli.py  model.py
src/arbitrage_bot/arbitrage/: costs.py  scanner.py
src/arbitrage_bot/config/: settings.py
src/arbitrage_bot/data/: fetcher.py
src/arbitrage_bot/exchange/: manager.py
src/arbitrage_bot/execution/: executor.py  order_manager.py
src/arbitrage_bot/logging/: setup.py
src/arbitrage_bot/models/: order.py
src/arbitrage_bot/risk_management/: manager.py
src/arbitrage_bot/utils/: circuit_breaker.py  error_handler.py
